--- a/lib/plausible_web/templates/page/data_policy.html.eex
+++ b/lib/plausible_web/templates/page/data_policy.html.eex
@@ -3,7 +3,7 @@
 <h1 class="text-2xl font-black">Data policy</h1>
 
 <div class="my-4">
-Plausible aims to track overall trends in your website traffic, not indivual visitors. With privacy in mind, we don’t collect or store any data beyond what is absolutely necessary. Here is a list of what we collect and store about your website visitors.
+Plausible aims to track overall trends in your website traffic, not individual visitors. With privacy in mind, we don’t collect or store any data beyond what is absolutely necessary. Here is a list of what we collect and store about your website visitors.
 </div>
 
 <div class="my-4">
