--- a/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_upgrade_email.html.eex
@@ -1,13 +1,13 @@
 Hey <%= user_salutation(@user) %>,
 <br /><br />
-Your free 30-day trial is ending <%= @day %>, but you can keep using Plausible by upgrading to a paid plan.
+Thanks for exploring Plausible, a simple and privacy-friendly alternative to Google Analytics. Your free 30-day trial is ending <%= @day %>, but you can keep using Plausible by upgrading to a paid plan.
 <br /><br />
 In the last month, your account has used <%= PlausibleWeb.AuthView.delimit_integer(@pageviews) %> pageviews.
 Based on that we recommend you select the <%= suggested_plan_name(@pageviews) %> plan which runs at <%= suggested_plan_cost(@pageviews) %>.
 <br /><br />
 <%= link("Upgrade now", to: "https://plausible.io/billing/upgrade") %>
 <br /><br />
-Have any questions? Just reply to this email to get in touch!
+Have a question, feedback or need some guidance? Just reply to this email to get in touch!
 <br /><br />
 <br /><br />
 Thanks,<br />
