--- a/lib/plausible_web/templates/email/welcome_email.html.eex
+++ b/lib/plausible_web/templates/email/welcome_email.html.eex
@@ -1,20 +1,14 @@
 Hey <%= user_salutation(@user) %>,
 <br /><br />
-I'm building Plausible to provide a simple and ethical approach to tracking website visitors. I'm super excited to
-have you on board!
+I'm building Plausible to provide a simple and ethical approach to tracking website visitors.
+I'm super excited to have you on board!
 <br /><br />
-The hardest part about building this product is getting the word out there. I'm a solo developer without
-a marketing budget, trying to make this business work. With your help, I might be able to go full-time soon.
+To start collecting stats, you need to <%= link("add a site on Plausible", to: "https://plausible.io/sites/new") %>.
 <br /><br />
-If you could share why you switched to Plausible with your friends, it would really help me out a lot.
-Truly, a single tweet or a blog post could make a huge difference for a small project like this.
-Would you be up for this?
-<br /><br />
-PS: Also check out our <a href="https://feedback.plausible.io/">collaborative roadmapping tool</a>. If you have any feature requests, you can raise them there.
+Have a question, feedback or need some guidance? Do reply back to this email.
 <br /><br />
 Thanks,<br />
-Uku Taht,<br />
-Founder, Plausible Insights
+Uku Taht
 <br /><br />
 --
 <br /><br />
