--- a/lib/plausible_web/templates/email/trial_over_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_over_email.html.eex
@@ -2,7 +2,8 @@ Hey <%= user_salutation(@user) %>,
 <br /><br />
 Your free Plausible trial has now expired. Upgrade your account to continue receiving valuable website traffic insights at a glance while respecting the privacy of your visitors and still having a fast loading site. <br /><br />
 
-<%= link("Upgrade now", to: "https://plausible.io/billing/upgrade") %> <br />
+<%= link("Upgrade now", to: "https://plausible.io/billing/upgrade") %>
+<br /><br />
 
 We will keep recording stats for another month to give you time to upgrade.
 
