New landing page (#47)
* Fix typo

* Update landing page with components from TailwindUI

* Update copy

* Update FAQ and testimonials

* Add feature section

* Update copy for integration

* Implement feedback

* Remove github button JS

* Update headings

* Update gray values

* Update CTA section

* Add copy

--- a/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_success.html.eex
@@ -4,7 +4,7 @@
     We have sent an email with password reset instructions to <b><%= @email %></b> if it exists in our database.
   </div>
   <div class="mt-8 text-sm">
-    Didn't recieve an email?
+    Didn't receive an email?
   </div>
   <div class="mt-2 text-sm text-gray-600 leading-tight">
     Please check your spam folder and contact <a href="mailto:uku@plausible.io">uku@plausible.io</a> if the problem persists
