--- a/lib/plausible_web/templates/layout/app.html.eex
+++ b/lib/plausible_web/templates/layout/app.html.eex
@@ -15,7 +15,7 @@
     <%= render("_svg_icons.html") %>
     <nav class="container flex items-center justify-between flex-wrap py-8">
       <div class="flex items-center flex-shrink-0">
-        <a href="/">
+        <a href="<%= home_dest(@conn) %>">
           <%= img_tag(PlausibleWeb.Router.Helpers.static_path(@conn, "/images/icon/plausible_logo.png"), style: "height: 2.5rem;", alt: "Plausible logo") %>
         </a>
       </div>
